2007-04-30  Jonathan HOLLAR <jjhollar@cern.ch>
	* tag V00-00-09
	* Collect several recent updates to parser.

2007-04-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-08
	* first integration of the converter with the GUI
	* optimizations to CfgDatabase.loadConfiguration()
	* add isEndPath() to Path, based on any 'OutputModule' being
	present in the Path
	* sql: add 'configDescriptor' field to 'Configurations'
	
2007-03-30  Jonathan HOLLAR <jjhollar@cern.ch>
	* tag V00-00-07
	* Collect recent parser changes for handling PSets defined in multiple 
	  packages w. multiple levels of nesting.

2007-03-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-06
	* collect fixes to the parser by Jonathan
	* after various patches, the GUI should be fully functional
	* this version is going to be bundled with the next RCMS release,
	I guess version 3.1.

2007-3-02   Jonathan HOLLAR <jjhollar@cern.ch>

	* tag V00-00-05
	* The parser has been modified to recognize inherited parameters.
	* Collect several recent commits from Ulf and Philipp.

2007-02-20  Jonathan HOLLAR <jjhollar@cern.ch>

	* tag V00-00-04
	* Add automatic filling of 'sequenceNb' to the parser. 

2007-02-16  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-00-03
	* Jonathan has checked in the first release of the parser. module
	to store in MySQL ready, Oracle module to follow. PSets/VPSets are
	handled.
	* changes to the database schema: The tables Services, EDSource,
	ESSources, SuperIdParameterAssoc, SuperIdParamSetAssoc, and
	SuperIdVerParamSetAssoc got an additional field 'sequenceNb' to
	indicate the order in which parameters are associated with their
	parent. This is important for VPSets, and possibly for PSets. If
	the order of Services matters isn't quite certain, but this way we
	avoid for them to appear in different orders in different
	sessions, which might be confusing.
	* The parser version is not compliant with that schema yet